k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: det-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: det-backend

  template:
    metadata:
      labels:
        app: det-backend

    spec:
      containers:
      - name: det-backend
        image: daily-execution-tracker-backend:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 8000
