k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: det-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: det-frontend

  template:
    metadata:
      labels:
        app: det-frontend

    spec:
      containers:
      - name: det-frontend
        image: daily-execution-tracker-frontend:v5

        imagePullPolicy: Never

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
