k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: det-backend-service

spec:
  selector:
    app: det-backend

  ports:
  - port: 8000
    targetPort: 8000

  type: NodePort
