k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: det-frontend-service

spec:
  selector:
    app: det-frontend

  ports:
  - port: 80
    targetPort: 80

  type: NodePort
