k8s/det-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: det-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: det.local
    http:
      paths:

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: det-backend-service
            port:
              number: 8000

      - path: /tasks
        pathType: Prefix
        backend:
          service:
            name: det-backend-service
            port:
              number: 8000

      - path: /activities
        pathType: Prefix
        backend:
          service:
            name: det-backend-service
            port:
              number: 8000

      - path: /health
        pathType: Prefix
        backend:
          service:
            name: det-backend-service
            port:
              number: 8000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: det-frontend-service
            port:
              number: 80
